# t3-digidash

./: .gitmodules  README.md
.github/workflows/: ci-disco.yml  ci-esp.yml  ci-nucleo.yml
docs/: sensor-measurements.md  specification.md
fw/disco/: .clangd  .gitattributes  .gitignore  .mxproject  CMakeLists.txt  mx-generated.cmake  t3_dash.ioc
fw/disco/CM4/: CMakeLists.txt  mx-generated.cmake  stm32h747xx_flash_CM4.ld  stm32h747xx_sram2_CM4.ld
fw/disco/CM4/Core/Inc/: main.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h
fw/disco/CM4/Core/Src/: main.c  stm32h7xx_hal_msp.c  stm32h7xx_it.c
fw/disco/CM7/: CMakeLists.txt  mx-generated.cmake  stm32h747xx_flash_CM7.ld
fw/disco/CM7/Core/Application/: App.c  App.h  Backlight.c  Backlight.h  Display.c  Display.h  QspiFlash.c  QspiFlash.h  SensorDataPublisher.c  SensorDataPublisher.h  TaskDefinitions.h  UartReceiver.c  UartReceiver.h
fw/disco/CM7/Core/Inc/: FreeRTOSConfig.h  main.h  stm32h7xx_hal_conf.h  (+1 more)
fw/disco/CM7/TouchGFX/: ApplicationTemplate.touchgfx.part  application.config  t3_dash.touchgfx  target.config
fw/disco/Common/Src/: system_stm32h7xx_dualcore_boot_cm4_cm7.c
fw/disco/Makefile/CM4/: Makefile
fw/disco/Makefile/CM7/: Makefile
fw/esp/: README.md  project.ino
fw/esp/main/: CMakeLists.txt  app_main.c  ble_app.c  ble_app.h  car_signals.c  car_signals.h  esp32c3.c  gatt_db.c  gatt_db.h  remotexy_protocol.c  remotexy_protocol.h  uart_parser.c  uart_parser.h  uart_task.c  uart_task.h
fw/esp/uart_py_simulator/: README.md  UART-Data_Produced-By-Nucleo_With-Emulated-Sensor-Input.txt  pyproject.toml
fw/esp/uart_py_simulator/src/uart_generator/: __main__.py
fw/nucleo/: .mxproject  CMakeLists.txt  README.md  mx-generated.cmake  t3-dash.ioc  t3-digidash.ioc
fw/nucleo/CM4/: CMakeLists.txt  stm32h755xx_flash_CM4.ld
fw/nucleo/CM4/app/: FreeRTOSConfig.h  app.c  app.h
fw/nucleo/CM7/: CMakeLists.txt  stm32h755xx_flash_CM7.ld
fw/nucleo/CM7/app/: app.c  app.h
fw/nucleo/Common/Inc/: shared.h
fw/nucleo/tests/: CMakeLists.txt  conversion_tests.c  filtering_tests.c
hw/disco-tft-adapter/: README.md  disco_tft_adapter.kicad_dru  disco_tft_adapter.kicad_pcb  disco_tft_adapter.kicad_prl  disco_tft_adapter.kicad_pro  disco_tft_adapter.kicad_sch  fp-lib-table  sym-lib-table
hw/disco-tft-adapter/libs/footprints.pretty/: F31L1A7H111030.kicad_mod  QTH-030-XX-Y-D-A.kicad_mod  SODFL1608X70N.kicad_mod  SOT65P210X110-5N.kicad_mod  TestPoint_TP_D0.5mm.kicad_mod
hw/disco-tft-adapter/libs/models/: F31L-1A7H1-11030.stp  NSR0240V2T1G.stp  QTH-030-02-L-D-A.stp
hw/disco-tft-adapter/libs/symbols/: my_parts.kicad_sym
hw/measurement-circuits/: .gitignore  README.md  measurement-circuits.kicad_prl  measurement-circuits.kicad_pro  measurement-circuits.kicad_sch
hw/signal-emulator/: README.md  signal-emulator.kicad_prl  signal-emulator.kicad_pro  signal-emulator.kicad_sch
hw/t3-harness-adapter/: .gitignore  README.md  readme.md
hw/t3-harness-adapter/t3-harness-adapter/: fp-lib-table  t3-harness-adapter.kicad_pcb  t3-harness-adapter.kicad_prl  t3-harness-adapter.kicad_pro  t3-harness-adapter.kicad_sch
t3-harness-adapter/: t3-harness-adapter.kicad_pcb  t3-harness-adapter.kicad_prl  t3-harness-adapter.kicad_pro  t3-harness-adapter.kicad_sch
t3-harness-adapter/aa_local_lib.pretty/: t3-harness-edge.kicad_mod
tools/nucleo-output-analyser/: .gitignore  README.md  live_motor_rpm.py  plot_motor_rpm.py
(+49 files in other folders)
